<?xml version="1.0"?>
<package format="3">
  <name>pressure_pkg</name>
  <version>0.0.0</version>
  <description>Pressure driver for reading and managing pressure sensor data.</description>

  <maintainer email="joaop.almeida@fbter.org.br">João Pedro Almeida</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>ros_driver_base</depend>
  <depend>std_msgs</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
